Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/DisplayMtl.mm
@@ -883,6 +883,9 @@ void DisplayMtl::initializeExtensions() const
 
         // GL_OES_EGL_sync
         mNativeExtensions.eglSyncOES = true;
+
+        // GL_ARB_sync
+        mNativeExtensions.glSyncARB = true;
     }
 }
 
